Fix card decorator spacing

--- a/components/card/index.css
+++ b/components/card/index.css
@@ -111,19 +111,13 @@
 .Card-decorator {
   width: 100%;
   height: 100%;
-  padding: var(--space);
+  padding: calc(var(--space) * 3);
   position: absolute;
   left: 0;
   top: 0;
   z-index: 1;
   color: var(--bright-sand);
   pointer-events: none;
-}
-
-@media (min-width: 600px) {
-  .Card:not(.Card--splash) .Card-decorator {
-    padding: calc(var(--space) * 0.8);
-  }
 }
 
 .Card-plus {
